2012-02-27  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Ops.R (A.M.n, A.n.M): <sparse> o <numeric> now correct, newly
	via sparseVector.

2012-02-25  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.0-5, CRAN-released: 2012-...., r...
	* src/chm_common.c (chm_factor_to_SEXP): in case of failure,
	* src/dsCMatrix.c (internal_chm_factor): ensure memory cleanup;
	memory leak reported by Kasper Kristensen at dtu.dk.

2012-02-17  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.0-4, CRAN-released: 2012-02-21, r2765
	* R/Ops.R: Fix "-" method for diagonalMatrix types.

2012-01-12  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Suggests): MASS, as we use a data set in a vignette

2011-12-09  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.0-3, CRAN-released: 2012-01-12, r2749
	* R/diagMatrix.R (.bdiag): now works correctly when all blocks are "lMatrix"

2011-11-02  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/zzz.R (.onLoad): when R version >= 2.15.0, no longer
	need to assignInNamespace( ns = "base"), methods provides S4 generic.

2011-10-30  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.0-2, CRAN-released: 2011-11-19, r2739

	* tests/other-pkgs.R: print more, don't run SparseM on Solaris for now.
	* tests/Simple.R: encoding warning should not be promoted to error.

2011-10-22  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/rankMatrix.R (rankMatrix): 'method = "qrLINPACK"' now also
	works for sparse matrices, but using \code{sparseQR()}.

	* man/sparseQR-class.Rd: document options "Matrix.quiet" (old) and
	new "Matrix.quiet.qr.R" for suppressiong the permutation warning.
	* R/sparseQR.R:

2011-10-17  Douglas Bates <bates@stat.wisc.edu>

	* src/Csparse.c (Csparse_submatrix): plugging memory leak

2011-10-08  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/bind2.R (cbind2Sparse, rbind2Sparse): auxiliaries,