@@ -1,6 +1,6 @@
 Package: Matrix
 Version: 1.0-5
-Date: 2012-02-27
+Date: 2012-03-03
 Priority: recommended
 Title: Sparse and Dense Matrix Classes and Methods
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
