@@ -7,9 +7,6 @@
   level e.g. for solve(<dsyMatrix>).   Should define  expand() method or
   similar, see man/BunchKaufman-methods.Rd and R/dsyMatrix.R (at end).
 
-- R/zzz.R : Remove the  '%x%'  base assignInNamespace hack --
-  	  as soon as R's  '%x%'  is properly generic  // or itself calls the generic kronecker()
-
 ----------------------------------------
 
 - Investigate the "band changing (and getting) ideas  'band<-' etc,
